# FlashForge

./: .coverage  .coveragerc  .gitignore  .pylintrc  BURNDOWN.md  LICENSE  README.md  RETRO.md  drop.sql  populate.sql  pyproject.toml  reset.sql  run_local_tests.sh  run_robot_tests.sh  run_setup.sh  schema.sql  todo.md  todo.txt  util.py
.github/workflows/: main.yaml
sql/: schema.sql
src/: app.py  config.py
src/entities/: reference.py
src/modules/: database.py  routes.py  validate.py
src/static/: main.css
src/templates/: advanced_search.html  article.html  base.html  base.jinja  book.html  create_ref.html  create_reference_article.html  create_reference_book.html  create_reference_inproceedings.html  create_reference_manual.html  delete_article.html  delete_ref.html  edit_article.html  edit_ref.html  index.html  inproceedings.html  refs.html  search_results.html  view_ref.html
src/tests/: article_form.robot  db_helper.py  db_test.py  log.html  output.xml  refs_advanced_search.robot  refs_edit_and_delete.robot  refs_list.robot  refs_order.robot  refs_search.robot  report.html  resource.robot
src/tests/dbtests/: db_test.py
