[tool.poetry]
name = "flashforge"
version = "0.0.0"
description = ""
authors = ["santeri0200", "kuroniil", "pinjakokkonen", "pondbackjunior", "Rasper-ux"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
robotframework = "^7.1.1"
robotframework-seleniumlibrary = "^6.6.1"
python-dotenv = "^1.0.1"
pyperclip = "^1.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
